Add EPUB file management features: implement duplicate file handling in saveEPUB method, introduce deleteEPUB method, and enhance LibraryView with metadata management and UI improvements for renaming and deleting books.

--- a/ios/AudIO/Info.plist
+++ b/ios/AudIO/Info.plist
@@ -52,5 +52,7 @@
 	<true/>
 	<key>LSSupportsOpeningDocumentsInPlace</key>
 	<false/>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>AudIO needs access to your photo library to add custom covers to your books.</string>
 </dict>
 </plist>
